ADD_SUBDIRECTORY(misc)

IF(WITH_3D)
  ADD_SUBDIRECTORY(3d)
ENDIF()

IF(WITH_WEB OR WITH_GUI)
  ADD_SUBDIRECTORY(web)
ENDIF()

IF(WITH_GUI)
  ADD_SUBDIRECTORY(gui)
ENDIF()

IF(WITH_GEORGES)
  ADD_SUBDIRECTORY(georges)
ENDIF()

IF(WITH_LIGO)
  ADD_SUBDIRECTORY(ligo)
ENDIF()

IF(WITH_LOGIC)
  ADD_SUBDIRECTORY(logic)
ENDIF()

IF(WITH_NET)
  ADD_SUBDIRECTORY(net)
ENDIF()

IF(WITH_SOUND)
  ADD_SUBDIRECTORY(sound)
ENDIF()

IF(WITH_NEL_CEGUI)
  ADD_SUBDIRECTORY(cegui)
ENDIF()

IF(WITH_PACS)
  ADD_SUBDIRECTORY(pacs)
ENDIF()

IF(WITH_NEL_TOOLS)
  ADD_SUBDIRECTORY(pipeline)
ENDIF()
