INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SRC_DIR} ${QT_INCLUDES})
FILE(GLOB RCERROR_SRC *.cpp)
FILE(GLOB RCERROR_HDR *h)

SET(RCERROR_MOC_HDR
rcerror_socket.h
rcerror_widget.h
)

SET(RCERROR_UI
rcerror_widget.ui
)

SET(QT_USE_QTGUI TRUE)
SET(QT_USE_QTNETWORK TRUE)
SET(QT_USE_QTMAIN TRUE)
SET(QT_USE_QTOPENGL FALSE)
SET(QT_USE_QTXML FALSE)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

QT4_WRAP_CPP(RCERROR_MOC_SRC ${RCERROR_MOC_HDR})
QT4_WRAP_UI(RCERROR_UI_HDR ${RCERROR_UI})

SOURCE_GROUP(QtResources FILES ${RCERROR_UI})
SOURCE_GROUP(QtGeneratedUiHdr FILES ${RCERROR_UI_HDR})
SOURCE_GROUP(QtGeneratedMocQrcSrc FILES ${RCERROR_MOC_SRC})
SOURCE_GROUP("source files" FILES ${RCERROR_SRC})
SOURCE_GROUP("header files" FILES ${RCERROR_HDR})

ADD_EXECUTABLE(rcerror WIN32 MACOSX_BUNDLE ${RCERROR_SRC} ${RCERROR_MOC_HDR} ${RCERROR_MOC_SRC} ${RCERROR_UI_HDR})
TARGET_LINK_LIBRARIES(rcerror ${QT_LIBRARIES} ${QT_QTMAIN_LIBRARY})

NL_DEFAULT_PROPS(rcerror "Ryzom Core Error Reporter")
NL_ADD_RUNTIME_FLAGS(rcerror)

