ADD_SUBDIRECTORY(misc)

IF(WITH_3D)
  ADD_SUBDIRECTORY(3d)
ENDIF(WITH_3D)

IF(WITH_GEORGES)
  ADD_SUBDIRECTORY(georges)
ENDIF(WITH_GEORGES)

IF(WITH_NET)
  ADD_SUBDIRECTORY(net)
ENDIF(WITH_NET)

IF(WITH_PACS)
  ADD_SUBDIRECTORY(pacs)
ENDIF(WITH_PACS)

IF(WITH_SOUND)
  ADD_SUBDIRECTORY(sound)
ENDIF(WITH_SOUND)
