ADD_SUBDIRECTORY(misc)

IF(WITH_3D)
  ADD_SUBDIRECTORY(3d)
ENDIF(WITH_3D)

IF(WITH_GUI)
  ADD_SUBDIRECTORY(gui)
ENDIF(WITH_GUI)

IF(WITH_GEORGES)
  ADD_SUBDIRECTORY(georges)
ENDIF(WITH_GEORGES)

IF(WITH_LIGO)
  ADD_SUBDIRECTORY(ligo)
ENDIF(WITH_LIGO)

IF(WITH_LOGIC)
  ADD_SUBDIRECTORY(logic)
ENDIF(WITH_LOGIC)

IF(WITH_NET)
  ADD_SUBDIRECTORY(net)
ENDIF(WITH_NET)

IF(WITH_SOUND)
  ADD_SUBDIRECTORY(sound)
ENDIF(WITH_SOUND)

IF(WITH_NEL_CEGUI)
  ADD_SUBDIRECTORY(cegui)
ENDIF(WITH_NEL_CEGUI)

IF(WITH_PACS)
  ADD_SUBDIRECTORY(pacs)
ENDIF(WITH_PACS)
