#
#

MAINTAINERCLEANFILES = Makefile.in

DIST_SUBDIRS	     = net 3d pacs sound misc georges ligo

SUBDIRS              = @NEL_SUBDIRS@

EXTRA_DIST           =	3d.vcproj	\
			georges.vcproj	\
			ligo.vcproj	\
			logic.vcproj	\
			misc.vcproj	\
			net.vcproj	\
			pacs.vcproj	\
			sound.vcproj

# End of Makefile.am
