ADD_SUBDIRECTORY(misc)
ADD_SUBDIRECTORY(memory)

IF(WITH_3D)
  ADD_SUBDIRECTORY(3d)
ENDIF(WITH_3D)

IF(WITH_PACS)
  ADD_SUBDIRECTORY(pacs)
ENDIF(WITH_PACS)

IF(WITH_LOGIC)
  ADD_SUBDIRECTORY(logic)
ENDIF(WITH_LOGIC)

IF(WITH_GEORGES)
  ADD_SUBDIRECTORY(georges)
ENDIF(WITH_GEORGES)

IF(WITH_SOUND)
  ADD_SUBDIRECTORY(sound)
ENDIF(WITH_SOUND)

IF(WITH_TESTS)
  ADD_SUBDIRECTORY(nel_unit_test)
ENDIF(WITH_TESTS)

#build_gamedata
