FILE(GLOB SRC *.cpp *.h)

ADD_EXECUTABLE(login_service WIN32 ${SRC})

INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR} ${MYSQL_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(login_service
						${LIBXML2_LIBRARIES}
						${MYSQL_LIBRARIES}
						${ZLIB_LIBRARIES}
						nelmisc
						nelnet)

NL_DEFAULT_PROPS(login_service "NelNS, Services: Login Service")
NL_ADD_RUNTIME_FLAGS(login_service)

ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

INSTALL(TARGETS login_service RUNTIME DESTINATION sbin COMPONENT ls)
INSTALL(FILES login_service.cfg common.cfg DESTINATION ${NL_ETC_PREFIX}/nelns COMPONENT ls)
